--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 /* Standard page styles */
 body {
   background-color: whitesmoke;
-  font-family: Palatino, 'Palatino Linotype', serif;
-  height: 100%; }
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+  height: 100%;
+  min-width: 400px; }
 
 #page-container {
   position: relative;
@@ -13,6 +14,9 @@ body {
 
 .nav-banner {
   background-color: seashell; }
+
+.navbar-brand {
+  margin-right: 5px; }
 
 .logo {
   height: 32px; }
@@ -31,18 +35,20 @@ a.link-nowrap {
 
 /* Home page styles */
 #homeintro {
-  width: 90%;
-  margin: auto;
-  font-family: Palatino, 'Palatino Linotype', serif;
+  background-image: url("Pictures/banner.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  width: 100%;
+  font-weight: 900;
   text-align: center;
-  padding-top: 50px;
-  border-bottom: solid 1px steelblue; }
+  font-family: Palatino, 'Palatino Linotype', serif;
+  color: white;
+  padding: 50px; }
 
 #homecards {
-  justify-content: space-evenly; }
-
-.homecardbtn {
-  background-color: steelblue; }
+  justify-content: space-evenly;
+  padding-top: 50px; }
 
 .homecard {
   background-color: seashell;
@@ -50,16 +56,54 @@ a.link-nowrap {
   width: 20rem;
   text-align: center; }
 
+.topic-image {
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden; }
+
+.topic-link:hover .topic-image {
+  opacity: 0.2; }
+
+.image-overlay {
+  opacity: 0;
+  position: absolute;
+  transition: .5s ease;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center; }
+
+.topic-link:hover .image-overlay {
+  opacity: 1; }
+
+.topic-view {
+  color: white;
+  background: steelblue;
+  font-size: 2em;
+  font-weight: bold;
+  padding: 15px;
+  border-radius: 10px; }
+
+.card-body {
+  padding: 10px; }
+
 /* Topic page styles */
 .topic-content {
   margin-top: 50px; }
 
-.topic-info {
-  padding: 15px 15px;
-  border-left: solid 1px steelblue; }
+.topic-text {
+  min-width: 300px;
+  max-width: 500px;
+  margin: 0 auto; }
 
-.info-table-heading {
-  padding-bottom: 5px; }
+.topic-info {
+  margin: 0 auto; }
+
+.flex-topic {
+  display: flex;
+  flex-wrap: wrap; }
 
 table ul, table ol {
   padding-left: 0;
@@ -75,20 +119,42 @@ table ol {
   height: 300px;
   margin: auto; }
 
+.about .row {
+  margin-top: 15px;
+  margin-bottom: 25px; }
+
+.about img {
+  height: 300px; }
+
+.gallery {
+  margin-top: 25px;
+  text-align: center; }
+
+.gallery img {
+  height: 200px;
+  margin: 15px; }
+
 /* Responsive media styles */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .topic-content {
     margin-top: 15px; }
 
-  .topic-info {
-    border-left: none; }
-
   #homeintro {
-    padding-top: 15px;
-    width: 80%;
-    border: none; }
+    padding: 15px; }
 
   .homecard {
-    margin: 15px 5px 15px 5px; } }
+    margin: 15px 5px; }
+
+  .about .float-right {
+    margin-right: 70px; }
+
+  .about .row {
+    margin-bottom: 0; }
+
+  .about .figure {
+    padding-top: 15px; }
+
+  .about img, .figure-caption {
+    margin-left: 70px; } }
 
 /*# sourceMappingURL=style.css.map */
